# diffinite

./: .gitignore  CHANGELOG.md  NOTICE  README.md  diffinite.py  diffinite.spec  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-binaries.yml  build-vsix.yml  ci.yml  publish.yml  release.yml
TDD/: generate_reports.py  google_oracle_api.py  grid_search.py  measure_baseline.py  measure_tuned.py  plagiarism_targets.md  score_analysis.py  threshold_sweep.py  weight_calibration.py
TDD/corpus/: afc_score_analysis.py  domain_profile_analysis.py  norm_ratio_simulation.py  norm_raw_analysis.py  suspicious_metrics.py  test_domain_convergence.py
TDD/corpus/report/: generalization_260315.md  todo_260315.md
TDD/google_oracle_api/: measure_baseline.py
TDD/legal_defense/: CleanRoom_MergeSort_A.java  CleanRoom_MergeSort_B.java  Factory_A.java  Factory_B.java  Singleton_A.java  Singleton_B.java  test_legal_defense.py
TDD/result_2603141013/: aosp.html  aosp.md  aosp_analysis.md  aosp_final.html  aosp_final.md  aosp_smoke.md  generation_log.txt  plagiarism_analysis.md  sqlite_analysis.md
TDD/tests/: test_plagiarism_dataset.py
doc/: algorithms.md  architecture.md  cli_guide.md  development.md  evidence_channels.md  modules.md  progress.md
docs/: README.md
example/: download_examples.py  example_download.bat
example/benchmark/: aosp.md  case_negative.md  case_oracle.md  plagiarism_case01.md
example/sqlite/: setup_example_sqlite.py
example/unicode/left/: mixed.py  日本語.java  계산기.py
example/unicode/right/: mixed.py  日本語.java  계산기.py
example/validation/: calibration.json  error_rate.md  pr_curve.csv
report/: audit_260315.md  cherrypick.md  deep.html  deep.md  legacy_260316.md  lessons_learned.md  lessons_learned_user.md  simple.html  simple.md  todo_2603132345.md  todo_2603152026.md  todo_260316.md  vscode_porting_analysis.md
src/diffinite/: __init__.py  __main__.py  ast_normalizer.py  calibration.py  cli.py  collector.py  deep_compare.py  differ.py  evidence.py  fingerprint.py  models.py  parser.py  pdf_fonts.json  pdf_gen.py  pipeline.py
src/diffinite/languages/: __init__.py  _defaults.py  _registry.py  _spec.py  c_family.py  csharp.py  data.py  go_rust_swift.py  java.py  javascript.py  markup.py  python.py  scripting.py
tests/: benchmark_runner.py  test_ast_normalizer.py  test_calibration.py  test_cli.py  test_cli_validation.py  test_collector.py  test_deep_compare.py  test_differ.py  test_differ_extended.py  test_evidence.py  test_evidence_hash.py  test_fingerprint.py  test_json_report_integration.py  test_languages.py  test_line_endings.py  test_metadata_scale.py  test_moved_blocks.py  test_normalize.py  test_normalize_whitespace.py  test_parser.py  test_pdf_gen.py  test_pipeline.py  test_plagiarism_dataset.py  test_report_robustness.py  test_security_cleanup.py  test_sqlite_integration.py  test_unicode_reports.py  test_validation_harness.py
tests/validation/: error_rate.py
vscode-extension/: .vscodeignore  CHANGELOG.md  DEPENDENCY_LICENSES.md  LICENSE  README.md  package-lock.json  package.json
vscode-extension/scripts/: build_bundle.ps1  update_lockfile.ps1
vscode-extension/src/: compareCommand.ts  config.ts  dirScanner.ts  extension.ts  helpViewer.ts  ignoreList.ts  optionsPanel.ts  resultViewer.ts  runner.ts  treeViewer.ts  webviewUtils.ts
