[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffinite"
version = "0.11.0"
description = "Forensic source-code comparison tool — Winnowing fingerprints and professional PDF reports for IP litigation & code audit"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    { name = "nash-dir" },
]
keywords = [
    "diff", "pdf", "source-code", "comparison", "bates-number",
    "forensics", "code-audit", "plagiarism-detection", "winnowing",
    "clone-detection",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Text Processing :: General",
    "Operating System :: OS Independent",
]
dependencies = [
    "rapidfuzz>=3.0.0",
    "charset-normalizer>=3.0.0",
    "xhtml2pdf>=0.2.11",
    "pypdf>=4.0.0",
    "pygments>=2.16.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]


[project.urls]
Homepage = "https://github.com/nash-dir/diffinite"
Repository = "https://github.com/nash-dir/diffinite"
Issues = "https://github.com/nash-dir/diffinite/issues"

[project.scripts]
diffinite = "diffinite.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["example*", "legacy*", "tests*"]

[tool.setuptools.exclude-package-data]
"*" = ["*.pdf", "*.bat"]

[tool.pytest.ini_options]
testpaths = ["tests"]
